ICU-695 - Fixing paragraph spacing for last child (#739)
* ICU-695 - Fixing paragraph spacing for last child

* updated snapshot

--- a/sass/layout/_post.scss
+++ b/sass/layout/_post.scss
@@ -1012,10 +1012,6 @@
         white-space: pre-wrap;
         width: 100%;
         word-break: break-word;
-
-        &:last-child {
-            display: inline;
-        }
     }
 
     .post__header--info {
